Post-merge cache update

--- a/metadata/md5-cache/dev-util/mdds-1.2.2
+++ b/metadata/md5-cache/dev-util/mdds-1.2.2
@@ -10,5 +10,5 @@ RDEPEND=dev-libs/boost:=
 SLOT=1/1.2
 SRC_URI=http://kohei.us/files/mdds/src/mdds-1.2.2.tar.bz2
 _eclass_exported_funcs=src_prepare:- src_configure:- src_compile:- src_test:-
-_eclasses_=eutils	b83a2420b796f7c6eff682679d08fe25	multilib	165fc17c38d1b11dac2008280dab6e80	toolchain-funcs	1b1da0c45c555989dc5d832b54880783
-_md5_=863bbc55bffbf9d33adeb1e4c6f83d6f
+_eclasses_=multilib	165fc17c38d1b11dac2008280dab6e80	toolchain-funcs	1b1da0c45c555989dc5d832b54880783
+_md5_=363b6ac653bc0d57415f7a6f42780829
