--- a/metadata/md5-cache/app-text/libetonyek-0.1.6
+++ b/metadata/md5-cache/app-text/libetonyek-0.1.6
@@ -10,5 +10,5 @@ RDEPEND=>=app-text/liblangtag-0.5 dev-libs/librevenge dev-libs/libxml2 sys-libs/
 SLOT=0
 SRC_URI=http://dev-www.libreoffice.org/src/libetonyek/libetonyek-0.1.6.tar.xz
 _eclass_exported_funcs=pkg_pretend:- src_prepare:- src_configure:- src_install:-
-_eclasses_=autotools	07e71b3b5690738ef7e8bc097077e00c	eutils	b83a2420b796f7c6eff682679d08fe25	libtool	4890219c51da247200223277f993e054	multilib	165fc17c38d1b11dac2008280dab6e80	toolchain-funcs	1b1da0c45c555989dc5d832b54880783
-_md5_=daae2d6c65b1363a15f72938dfe37adc
+_eclasses_=autotools	07e71b3b5690738ef7e8bc097077e00c	libtool	4890219c51da247200223277f993e054	multilib	165fc17c38d1b11dac2008280dab6e80	toolchain-funcs	1b1da0c45c555989dc5d832b54880783
+_md5_=98e39ce0b5252edeff85b2458e305a1f
