--- a/metadata/md5-cache/app-text/libodfgen-0.1.6
+++ b/metadata/md5-cache/app-text/libodfgen-0.1.6
@@ -1,5 +1,5 @@
 DEFINED_PHASES=configure install prepare
-DEPEND=dev-libs/librevenge >=dev-libs/boost-1.46 virtual/pkgconfig doc? ( app-doc/doxygen )
+DEPEND=dev-libs/librevenge virtual/pkgconfig doc? ( app-doc/doxygen )
 DESCRIPTION=Library to generate ODF documents from libwpd and libwpg
 EAPI=6
 HOMEPAGE=http://libwpd.sf.net
@@ -10,5 +10,4 @@ RDEPEND=dev-libs/librevenge
 SLOT=0
 SRC_URI=mirror://sourceforge/libwpd/libodfgen-0.1.6.tar.xz
 _eclass_exported_funcs=src_prepare:- src_configure:- src_install:-
-_eclasses_=eutils	b83a2420b796f7c6eff682679d08fe25	multilib	165fc17c38d1b11dac2008280dab6e80	toolchain-funcs	1b1da0c45c555989dc5d832b54880783
-_md5_=4bde250a3bf47b1887057c7c65383e7c
+_md5_=af804b4f2e42c6598dad199ecd93fa0e
