--- a/metadata/md5-cache/app-text/libwpd-0.10.1
+++ b/metadata/md5-cache/app-text/libwpd-0.10.1
@@ -1,14 +1,14 @@
 DEFINED_PHASES=configure install postinst postrm
 DEPEND=dev-libs/librevenge virtual/pkgconfig doc? ( app-doc/doxygen )
 DESCRIPTION=WordPerfect Document import/export library
-EAPI=5
+EAPI=6
 HOMEPAGE=http://libwpd.sf.net
 IUSE=doc +tools
 KEYWORDS=~alpha amd64 ~arm ~hppa ~mips x86 ~x86-fbsd
 LICENSE=|| ( LGPL-2.1 MPL-2.0 )
-RDEPEND=dev-libs/librevenge !<app-text/libwpd-0.8.14-r1
+RDEPEND=dev-libs/librevenge
 SLOT=0.10
 SRC_URI=mirror://sourceforge/libwpd/libwpd-0.10.1.tar.xz
 _eclass_exported_funcs=pkg_postrm:- pkg_postinst:- src_configure:- src_install:-
-_eclasses_=alternatives	b19e1ec28e600fa497461bddfb9c1f16	eutils	b83a2420b796f7c6eff682679d08fe25	multilib	165fc17c38d1b11dac2008280dab6e80	toolchain-funcs	1b1da0c45c555989dc5d832b54880783
-_md5_=d5b47c73892eca2296c9a918f211edd0
+_eclasses_=alternatives	b19e1ec28e600fa497461bddfb9c1f16
+_md5_=2100176a033be23cbe215b6d65493751
