--- a/metadata/md5-cache/app-text/libwpg-0.3.1
+++ b/metadata/md5-cache/app-text/libwpg-0.3.1
@@ -1,7 +1,7 @@
 DEFINED_PHASES=configure install postinst postrm
 DEPEND=app-text/libwpd:0.10[tools] dev-libs/librevenge virtual/pkgconfig doc? ( app-doc/doxygen )
 DESCRIPTION=C++ library to read and parse graphics in WPG
-EAPI=5
+EAPI=6
 HOMEPAGE=http://libwpg.sourceforge.net/libwpg.htm
 IUSE=doc static-libs
 KEYWORDS=~alpha ~amd64 ~arm ~hppa ~mips ~x86
@@ -10,5 +10,5 @@ RDEPEND=app-text/libwpd:0.10[tools] dev-libs/librevenge
 SLOT=0.3
 SRC_URI=mirror://sourceforge/libwpg/libwpg-0.3.1.tar.xz
 _eclass_exported_funcs=pkg_postrm:- pkg_postinst:- src_configure:- src_install:-
-_eclasses_=alternatives	b19e1ec28e600fa497461bddfb9c1f16	eutils	b83a2420b796f7c6eff682679d08fe25	multilib	165fc17c38d1b11dac2008280dab6e80	toolchain-funcs	1b1da0c45c555989dc5d832b54880783
-_md5_=21186aeecf3da487f3ac92a7f2976853
+_eclasses_=alternatives	b19e1ec28e600fa497461bddfb9c1f16
+_md5_=9c0cab15f7dc7a910cbaf5eca6cda2b0
