--- a/metadata/md5-cache/sci-libs/openlibm-0.5.4
+++ b/metadata/md5-cache/sci-libs/openlibm-0.5.4
@@ -5,10 +5,10 @@ EAPI=6
 HOMEPAGE=https://github.com/JuliaLang/openlibm
 IUSE=static-libs
 KEYWORDS=~amd64 ~x86 ~amd64-linux ~x86-linux
-LICENSE=MIT freedist public-domain BSD
+LICENSE=public-domain MIT ISC BSD-2 LGPL-2.1+
 RDEPEND=virtual/fortran
 SLOT=0/0.5.4.0
 SRC_URI=https://github.com/JuliaLang/openlibm/archive/v0.5.4.tar.gz -> openlibm-0.5.4.tar.gz
 _eclass_exported_funcs=pkg_setup:fortran-2 src_install:-
 _eclasses_=epatch	8233751dc5105a6ae8fcd86ce2bb0247	epunt-cxx	f8073339d152f56626493f43d8ba4691	estack	43ddf5aaffa7a8d0482df54d25a66a1f	eutils	e7491451996e8b54c3caeb713285b0fb	fortran-2	9e7f20c99213f0627ff7f873d4aaa25d	ltprune	2770eed66a9b8ef944714cd0e968182e	multilib	0236be304ee52e7f179ed2f337075515	toolchain-funcs	6eb35f81556258a4bc9182ad3dfd58ee
-_md5_=4404871e555a75b883ec44933912c56a
+_md5_=5f4c81b67c12fec691cc3ea1a0e59f90
