--- a/metadata/md5-cache/dev-db/percona-xtrabackup-2.4.7
+++ b/metadata/md5-cache/dev-db/percona-xtrabackup-2.4.7
@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install prepare test
-DEPEND=app-arch/lz4:0= app-editors/vim-core >=dev-libs/boost-1.59.0:= dev-libs/libaio dev-libs/libedit dev-libs/libevent:0= dev-libs/libgcrypt:0= dev-libs/libgpg-error dev-python/sphinx net-misc/curl sys-libs/zlib sys-devel/make >=dev-util/cmake-3.7.2
+DEPEND=app-arch/lz4:0= app-editors/vim-core >=dev-libs/boost-1.59.0:= dev-libs/libaio dev-libs/libedit dev-libs/libev dev-libs/libevent:0= dev-libs/libgcrypt:0= dev-libs/libgpg-error dev-python/sphinx net-misc/curl sys-libs/zlib sys-devel/make >=dev-util/cmake-3.7.2
 DESCRIPTION=Hot backup utility for MySQL based servers
 EAPI=6
 HOMEPAGE=https://www.percona.com/software/mysql-database/percona-xtrabackup
 KEYWORDS=~amd64 ~x86
 LICENSE=GPL-2
-RDEPEND=app-arch/lz4:0= app-editors/vim-core >=dev-libs/boost-1.59.0:= dev-libs/libaio dev-libs/libedit dev-libs/libevent:0= dev-libs/libgcrypt:0= dev-libs/libgpg-error dev-python/sphinx net-misc/curl sys-libs/zlib !dev-db/xtrabackup-bin dev-perl/DBD-mysql
+RDEPEND=app-arch/lz4:0= app-editors/vim-core >=dev-libs/boost-1.59.0:= dev-libs/libaio dev-libs/libedit dev-libs/libev dev-libs/libevent:0= dev-libs/libgcrypt:0= dev-libs/libgpg-error dev-python/sphinx net-misc/curl sys-libs/zlib !dev-db/xtrabackup-bin dev-perl/DBD-mysql
 SLOT=0
 SRC_URI=https://www.percona.com/downloads/XtraBackup/Percona-XtraBackup-2.4.7/source/tarball/percona-xtrabackup-2.4.7.tar.gz
 _eclass_exported_funcs=src_prepare:- src_configure:- src_compile:cmake-utils src_test:cmake-utils src_install:-
 _eclasses_=cmake-utils	a69f3a404abc4ade0a99e523f51b989d	epatch	8233751dc5105a6ae8fcd86ce2bb0247	estack	43ddf5aaffa7a8d0482df54d25a66a1f	eutils	9c113d6a64826c40154cad7be15d95ea	flag-o-matic	61cad4fb5d800b29d484b27cb033f59b	ltprune	2770eed66a9b8ef944714cd0e968182e	multilib	0236be304ee52e7f179ed2f337075515	multiprocessing	284a473719153462f3e974d86c8cb81c	toolchain-funcs	6eb35f81556258a4bc9182ad3dfd58ee	versionator	c80ccf29e90adea7c5cae94b42eb76d0
-_md5_=ed8125a54ea5d5cb76b5cc27c02ce807
+_md5_=f34d32852b2d5d3ebdd4483a67741ad0
